# hivewright-v2

./: .env.example  .gitignore  .gitleaks.toml  README.md  eslint.config.mjs  hivewrightv2-dashboard.service  hivewrightv2-dispatcher.service  next.config.ts  package-lock.json  package.json  start-dispatcher.sh  vitest.config.ts  vitest.global-setup.ts
docs/: STREAMING.md  installation.md  public-repository-boundary.md
drizzle/: 0000_large_albert_cleary.sql  0001_sharp_changeling.sql  0002_green_lionheart.sql  0003_clumsy_gamora.sql  0004_striped_moondragon.sql  0005_elite_pixie.sql  0006_task_logs.sql  0007_goal_documents.sql  0008_first_zaran.sql  0009_thick_ink.sql  0010_sad_union_jack.sql  0011_chemical_sally_floyd.sql  0012_cooing_fabian_cortez.sql  0013_awesome_proudstar.sql  0014_boring_boom_boom.sql  0015_work_intake_classifier.sql  0016_rename_businesses_to_hives.sql  0017_goal_comments.sql  0018_goal_last_woken_sprint.sql  0019_role_fallback_adapter.sql  0020_connector_framework.sql  0021_oauth_states.sql  0022_ai_board.sql  0023_users_and_memberships.sql  0024_role_tools_config.sql  0025_drop_active_departments.sql  0026_insight_curator.sql  0027_decisions_kind.sql  0028_native_ea.sql  0029_decisions_ea_review.sql  0030_decisions_ea_review_notify.sql  0031_hive_supervisor.sql  (+79 more)
gpu-services/voice/: README.md  pyproject.toml
gpu-services/voice/src/voice_services/: server.py  stt.py  tts.py  voiceprint.py
gpu-services/voice/systemd/: voice-services.service
gpu-services/voice/tests/: test_health.py  test_stt.py  test_tts.py  test_voiceprint.py
(+1253 files in other folders)
